--- a/StyleSheet/AttendanceManagement.css
+++ b/StyleSheet/AttendanceManagement.css
@@ -14,6 +14,15 @@ body {
     background-color: var(--bg-gray);
 }
 
+.top-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 2px solid #ddd;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+
 /* Main Content Area */
 .content {
     flex-grow: 1;
@@ -357,5 +366,6 @@ background-color: #f9f9f9;
         background-color: #f9f9f9; /* Remove hover effect for future dates */
 
     }
+
 
 
